--- a/spotter/Classes/Views/TimeLineTableViewCell.xib
+++ b/spotter/Classes/Views/TimeLineTableViewCell.xib
@@ -11,31 +11,32 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="199" id="KGk-i7-Jjw" customClass="TableViewCell" customModule="spotter" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="665" height="199"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="139" id="KGk-i7-Jjw" customClass="TimeLineTableViewCell" customModule="spotter" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="475" height="139"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="665" height="198.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="475" height="138.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="FF9ありがとうございます! # うれしい 曲名「バンザイ　~好きでよかった~」ウルフルズ  http://曲が聞けるリンクが貼られる。" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="UHa-UB-xAf">
-                        <rect key="frame" x="177" y="0.0" width="488" height="199"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FZ3-PO-kIS">
+                        <rect key="frame" x="-53" y="-13" width="287" height="152"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="BjN-Gg-mvv">
+                        <rect key="frame" x="227" y="0.0" width="248" height="139"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="komei" translatesAutoresizingMaskIntoConstraints="NO" id="pft-VU-Q3K">
-                        <rect key="frame" x="0.0" y="0.0" width="178" height="199"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    </imageView>
                 </subviews>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="23" y="96"/>
+            <connections>
+                <outlet property="faceImageView" destination="FZ3-PO-kIS" id="ECb-jE-3C8"/>
+                <outlet property="tweetText" destination="BjN-Gg-mvv" id="28o-0T-KDg"/>
+            </connections>
+            <point key="canvasLocation" x="79" y="140"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="komei" width="460" height="460"/>
-    </resources>
 </document>
