--- a/spotter/Classes/Views/TimeLineTableViewCell.xib
+++ b/spotter/Classes/Views/TimeLineTableViewCell.xib
@@ -11,19 +11,19 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="139" id="KGk-i7-Jjw" customClass="TimeLineTableViewCell" customModule="spotter" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="475" height="139"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="98" id="KGk-i7-Jjw" customClass="TimelineTableViewCell" customModule="spotter" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="453" height="98"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="475" height="138.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="453" height="97.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FZ3-PO-kIS">
-                        <rect key="frame" x="-53" y="-13" width="287" height="152"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fKs-ic-Fvb">
+                        <rect key="frame" x="0.0" y="0.0" width="150" height="98"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="BjN-Gg-mvv">
-                        <rect key="frame" x="227" y="0.0" width="248" height="139"/>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="NqI-Ji-5tb">
+                        <rect key="frame" x="148" y="-8" width="305" height="106"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -33,10 +33,10 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="faceImageView" destination="FZ3-PO-kIS" id="ECb-jE-3C8"/>
-                <outlet property="tweetText" destination="BjN-Gg-mvv" id="28o-0T-KDg"/>
+                <outlet property="faceImageView" destination="fKs-ic-Fvb" id="7Rm-bw-XBb"/>
+                <outlet property="tweetText" destination="NqI-Ji-5tb" id="kVc-Mq-D4G"/>
             </connections>
-            <point key="canvasLocation" x="79" y="140"/>
+            <point key="canvasLocation" x="-180.5" y="149"/>
         </tableViewCell>
     </objects>
 </document>
