--- a/spotter/Classes/Views/TimeLineTableViewCell.xib
+++ b/spotter/Classes/Views/TimeLineTableViewCell.xib
@@ -5,38 +5,55 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="98" id="KGk-i7-Jjw" customClass="TimelineTableViewCell" customModule="spotter" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="453" height="98"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="145" id="KGk-i7-Jjw" customClass="TimelineTableViewCell" customModule="spotter" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="453" height="145"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="453" height="97.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="453" height="144.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fKs-ic-Fvb">
-                        <rect key="frame" x="0.0" y="0.0" width="150" height="98"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fKs-ic-Fvb">
+                        <rect key="frame" x="16" y="17" width="126" height="109"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="109" id="6m3-qQ-N2p"/>
+                            <constraint firstAttribute="width" constant="126" id="qN1-i8-tQK"/>
+                        </constraints>
                     </imageView>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="NqI-Ji-5tb">
-                        <rect key="frame" x="171" y="0.0" width="282" height="98"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Ug9-Hw-OoP">
+                        <rect key="frame" x="157" y="7" width="288" height="131"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="Ug9-Hw-OoP" secondAttribute="height" multiplier="288:131" id="VAa-B5-YmH"/>
+                            <constraint firstAttribute="width" secondItem="Ug9-Hw-OoP" secondAttribute="height" multiplier="288:131" id="td1-uL-iP8"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="fKs-ic-Fvb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="8E2-mI-0tY"/>
+                    <constraint firstItem="fKs-ic-Fvb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="9" id="9EC-Vh-zxt"/>
+                    <constraint firstAttribute="bottom" secondItem="Ug9-Hw-OoP" secondAttribute="bottom" constant="6.5" id="Beb-0p-9gU"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="fKs-ic-Fvb" secondAttribute="bottom" constant="10.5" id="Vvo-ll-pXU"/>
+                    <constraint firstItem="Ug9-Hw-OoP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="e6j-oU-fK1"/>
+                    <constraint firstItem="Ug9-Hw-OoP" firstAttribute="leading" secondItem="fKs-ic-Fvb" secondAttribute="trailing" constant="15" id="l6f-QK-HtS"/>
+                    <constraint firstAttribute="trailing" secondItem="Ug9-Hw-OoP" secondAttribute="trailing" constant="8" id="wyC-HI-HmA"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="faceImageView" destination="fKs-ic-Fvb" id="7Rm-bw-XBb"/>
-                <outlet property="tweetText" destination="NqI-Ji-5tb" id="kVc-Mq-D4G"/>
+                <outlet property="tweetText" destination="Ug9-Hw-OoP" id="yiQ-lA-nhg"/>
             </connections>
-            <point key="canvasLocation" x="-80" y="145"/>
+            <point key="canvasLocation" x="108.5" y="-128.5"/>
         </tableViewCell>
     </objects>
 </document>
