--- a/spotter/Storyboards/Login.storyboard
+++ b/spotter/Storyboards/Login.storyboard
@@ -62,6 +62,10 @@
                                         <real key="value" value="8"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="pushLoginButton:" destination="CI2-0d-gYl" eventType="touchUpInside" id="dRe-i6-gz1"/>
+                                    <segue destination="siV-9Z-js9" kind="show" identifier="goTimeLine" id="Wci-Qa-ryT"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="エラーメッセージ用" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YFK-o9-XY4">
                                 <rect key="frame" x="41" y="222" width="293" height="40"/>
@@ -103,6 +107,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6cC-D1-HvC" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="32.799999999999997" y="32.833583208395808"/>
+        </scene>
+        <!--TimeLine-->
+        <scene sceneID="dJg-FX-0WE">
+            <objects>
+                <viewControllerPlaceholder storyboardName="TimeLine" id="siV-9Z-js9" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3wY-Be-Abs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="635" y="58"/>
         </scene>
     </scenes>
 </document>
